Set-up a basic test

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 		<title>Markov Babbler</title>
 		<link rel="stylesheet" href="css/main.css">
-		<script src="js/babbler.js"></script>
 	</head>
 
 	<body>
@@ -15,5 +14,8 @@
 		<br />
 		<button id="toBabble" onclick="goBabble()">Ready, Set, Go!</button>
 		<p>Babbling to Come...</p>
+
+		<script src="js/babbler.js"></script>
+		<script src="js/htmlfuncs.js"></script>
 	</body>
 </html>
