--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<button id="toBabble" onclick="goBabble()">Ready, Set, Go</button>
+		<button id="toBabble" onclick="goBabble()">Ready, Set, Go!</button>
 		<p></p>
 
 		<script src="js/babbler.js"></script>
