--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<button id="toBabble" onclick="goBabble()">Ready, Set, Go!</button>
-		<p></p>
+		<button type="button" onclick="goBabble()">Ready, Set, Go!</button>
+		<p id="toBabble"></p>
 
 		<script src="js/babbler.js"></script>
 		<script src="js/htmlfuncs.js"></script>
