--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<button type="button" onclick="goBabble()">Ready, Set, Go!</button>
-		<p id="toBabble"></p>
+		<button onclick="goBabble()">Ready, Set, Go</button>
 
 		<script src="js/babbler.js"></script>
 		<script src="js/htmlfuncs.js"></script>
+
+		<p id="toBabble"></p>
 	</body>
 </html>
