Trying a new layout

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<button onclick="goBabble()">Ready, Set, Go</button>
+		<button type="button" onclick="babble(1, 1)">Ready, Set, Go!</button>
 
 		<script src="js/babbler.js"></script>
 		<script src="js/htmlfuncs.js"></script>
 
 		<p id="toBabble"></p>
+		<p id="writeToMe"></p>
 	</body>
 </html>
