Loading script didnt work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br />
 		<button type="button" onclick="babble(1, 1)">Ready, Set, Go!</button>
 
-		<p id="toBabble"></p>
+		<p id="toBabble" onload="init()"></p>
 		<p id="writeToMe"></p>
 	</body>
 </html>
