why did that work before the button but not after? So confused

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<p id="toBabble"></p>
-		<script> init(); </script>
+		<p id="toBabble" onload="init()"></p>
 		<p id="writeToMe"></p>
 
 		<button type="button" onclick="babble(1, 1)">Ready, Set, Go!</button>
