Trying to debug this and failing

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 		<meta name="author" content="Andoni Garcia">
 
 		<title>Markov Babbler</title>
+
 		<link rel="stylesheet" href="css/main.css">
-		<script src="js/babbler.js"></script>
 		<script src="js/htmlfuncs.js"></script>
+		<script src="js/babbler.js"></script>
 	</head>
 
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<p id="toBabble" onload="init()"></p>
+		<p id="toBabble" onload="init()"></p><br />
 		<p id="writeToMe"></p>
 
-		<button type="button" onclick="babble(1, 1)">Ready, Set, Go!</button>
+		<button type="button" onclick="babble()">Ready, Set, Go!</button>
 	</body>
 </html>
