best progress so far! Finally getting responses

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<p id="toBabble" onload="init()"></p><br />
 		<p id="writeToMe"></p>
 
-		<button type="button" onclick="babble()">Ready, Set, Go!</button>
+		<button type="button" onclick="init()">Ready, Set, Go!</button>
 	</body>
 </html>
