two small typos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<br />
 		<input type="file" id="file-input" value="docs/HuckleberryFinn.txt" />
 		<script>
-			document.getElementById('file-input').addEventListener('click', init, flase);
+			document.getElementById('file-input').addEventListener('click', init, false);
 		</script>
 		<button type="button" onclick="start(1,1)">Ready, Set, Go!</button>
 
