Adding ajax/jquery dependency

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 		<button type="button" onclick="start(1,1)">Ready, Set, Go!</button>
 
 		<p id="writeToMe"></p>
+
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	</body>
 </html>
