Didn't write. Try this

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
-		<button type="button" onclick="start(1,1)">Ready, Set, Go!</button>
+		<button type="button" onclick="start()">Ready, Set, Go!</button>
 
 		<p id="writeToMe"></p>
 
