--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<script src="js/babbler.js"></script>
 		<script src="js/FileParsing.js"></script>
+		<script src="js/Debugging.js"></script>
 		<script src="js/Initializations.js"></script>
 	</head>
 
