--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<body>
 		<h1>Markov Babbler</h1>
 		<br />
+		<input type="file" id="files" name="files[]" multiple />
+		<script>
+		document.getElementById('files').addEventListener('change', handleFileSelect, false);
+		</script>
 		<button type="button" onclick="start()">Ready, Set, Go!</button>
 
 		<p id="writeToMe"></p>
