--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 			<button type="button" onclick="start(this.form.sentences.value, this.form.paragraphs.value)">Ready, Set, Go!</button>
 		</form>
 
-		<p id="writeToMe"></p>
+		<div id="writeHere">
+			<div id="child">
+				<p id="canWrite">
+				</p>
+			</div>
+		</div>
 
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
