--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
 		<script>
 		document.getElementById('files').addEventListener('change', handleFileSelect, false);
 		</script>
+		<br />
 		<form name="userInput">
 			<label for="sentences">
-				<input type="number" name="sentences" value="1">
 				Sentences:
+				<input type="number" name="sentences" step="1" value="1">
 			</label>
 			<label for="paragraphs">
-				<input type-"number" name="paragraphs" value="1">
 				Paragraphs:
+				<input type-"number" name="paragraphs" step="1" value="1">
 			</label>
+			<br />
 			<button type="button" onclick="start(this.form.sentences.value, this.form.paragraphs.value)">Ready, Set, Go!</button>
 		</form>
-
+		<br />
 		<div id="writeHere">
 		</div>
 
