Work Around for Huck Text w/o button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 		<script>
 		document.getElementById('files').addEventListener('change', handleFileSelect, false);
 		</script>
+		<button type="button" onclick="huck()">Or Chose Huckleberry Finn</button>
+		<script src="/js/HuckleberryFinn.js">
+			function huck(){
+				insertFile(HUCKLEBERRYFINN_ARRAY);
+			}
+		</script>
 		<br />
 		<br />
 		<form name="userInput">
