Figuring out how I want it to function

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 		<script>
 		document.getElementById('files').addEventListener('change', handleFileSelect, false);
 		</script>
-		<button type="button" id="huckButton">Or Chose Huckleberry Finn</button>
-		<script>
-			document.getElementById('huckButton').addEventListener('click', huckInit(), false);
-		</script>
+		<button type="button" onclick="huckInit()">Or Chose Huckleberry Finn</button>
 		<br />
 		<br />
 		<form name="userInput">
