Fixed file parsing

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
         </section>
         
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
         <script src="js/babbler.js"></script>
         <script src="js/FileParsing.js"></script>
         <script src="js/Initializations.js"></script>
         <script src="js/TabActions.js"></script>
+        <script src="js/Debugging.js"></script>
     </body>
 </html>
